--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==0.15.0
 altair==4.1.0
 altgraph==0.17.2
 anyio==3.5.0
+argcomplete==1.12.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.4.1
@@ -9,11 +10,14 @@ astor==0.8.1
 astunparse==1.6.3
 async-generator==1.10
 attrs==21.4.0
+auto-py-to-exe==2.18.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
 base58==2.1.1
 bleach==4.1.0
 blinker==1.4
+bottle==0.12.19
+bottle-websocket==0.2.9
 cached-property==1.5.2
 cachetools==4.2.4
 certifi==2021.5.30
@@ -29,20 +33,25 @@ cryptography==36.0.2
 cvzone==1.5.6
 cycler==0.11.0
 dataclasses==0.6
+debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
 djitellopy==2.4.0
+Eel==0.12.4
 entrypoints==0.4
 fastapi==0.75.0
 Flask==2.0.3
 flatbuffers==1.12
 future==0.18.2
 gast==0.4.0
+gevent==21.12.0
+gevent-websocket==0.10.1
 gitdb==4.0.9
 GitPython==3.1.18
 google-auth==1.35.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+greenlet==1.1.2
 grpcio==1.44.0
 h11==0.13.0
 h5py==3.1.0
@@ -68,6 +77,7 @@ Markdown==3.3.6
 MarkupSafe==2.0.1
 mathparse==0.1.2
 matplotlib==3.3.4
+matplotlib-inline==0.1.3
 mistune==0.8.4
 MouseInfo==0.1.3
 nbclient==0.5.9
@@ -116,6 +126,7 @@ pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 pywin32-ctypes==0.2.0
 pywinpty==1.1.6
+pyxlsb==1.0.9
 PyYAML==6.0
 pyzmq==22.3.0
 regex==2022.1.18
@@ -141,7 +152,7 @@ thop==0.0.31.post2005241907
 threadpoolctl==3.0.0
 toml==0.10.2
 toolz==0.11.2
-torch==1.10.1
+torch==1.11.0
 tornado==6.1
 tqdm==4.62.3
 traitlets==4.3.3
@@ -156,7 +167,10 @@ watchdog==2.1.6
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==2.0.2
+whichcraft==0.6.1
 widgetsnbextension==3.6.0
 wincertstore==0.2
 wrapt==1.12.1
 zipp==3.6.0
+zope.event==4.5.0
+zope.interface==5.4.0
